apps/digest/digest-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digest
  namespace: toolbox
  labels:
    app.kubernetes.io/name: digest
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: digest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: digest
    spec:
      serviceAccountName: default
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 101
      dnsPolicy: ClusterFirst
      containers:
        - name: digest
          image: "ghcr.io/loutik/digest:1.0.0"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 999
            runAsGroup: 999
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 75m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
