apps/digest/digest-service.yml
apiVersion: v1
kind: Service
metadata:
  name: digest
  namespace: toolbox
  labels:
    app.kubernetes.io/name: digest
spec:
  selector:
    app.kubernetes.io/name: digest
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
