apps/digest/digest-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: digest
  namespace: toolbox
  labels:
    app.kubernetes.io/name: digest
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`digest.loutik.fr`)
      kind: Rule
      services:
        - name: digest
          port: 80
